setting up the basic

--- a/index.html
+++ b/index.html
@@ -10,19 +10,40 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    body{
+      background-color: hsl(212, 45%, 89%);
+    }
+    h1{
+      color: hsl(216, 15%, 48%);
+    }
+    p{
+      color: hsl(218, 44%, 22%);
+    }
+    #main{
+      width: 250px;
+      height: auto;
+      padding: 25px;
+      background-color: White: hsl(0, 0%, 100%);
+    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <!-- main -->
+  <div id="main">
+    <img src="images/image-qr-code.png" alt="qr-code-image">
+    <h1>
+      Improve your front-end skills by building projects
+    </h1>
+    <p>
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    </p>
+  </div>
+  <!-- attribution -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://resume8305.wordpress.com/">Prashant Uniyal</a>.
   </div>
 </body>
 </html>
